# mujoco_robot_environments

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  local_setup.sh  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.docker/: Dockerfile  docker-compose.yaml
.github/workflows/: rearrangement_benchmark.yaml  release.yaml
mujoco_robot_environments/: lasa_data_generation.py  lasa_policy_deployment.py  transporter_network_data_generation.py
mujoco_robot_environments/assets/mjcf/gala_apple/: Apple.xml  Apple_edit.mtl  material.mtl
mujoco_robot_environments/automated_controller_tuning/: README.md  rearrangement_controller_tuning.py
mujoco_robot_environments/config/: lasa.yaml  pick_mjx.yaml  rearrangement.yaml
mujoco_robot_environments/config/arena/: lasa.yaml
mujoco_robot_environments/config/arena/cameras/: lasa.yaml  rearrangement.yaml  transporter_data_collection.yaml
mujoco_robot_environments/config/arena/props/: apple.yaml  colour_splitter.yaml  itl_agent_demo.yaml  itl_rearrangement.yaml
mujoco_robot_environments/config/robots/: franka.yaml  franka_robotiq_2f85.yaml  franka_robotiq_2f85_mjx.yaml
mujoco_robot_environments/config/robots/arm/: franka_emika_panda.yaml  franka_emika_panda_mjx.yaml
mujoco_robot_environments/config/robots/arm/controller_config/: osc.yaml
mujoco_robot_environments/config/robots/arm/sensor_config/: position.yaml
mujoco_robot_environments/config/robots/end_effector/: robotiq_2f85.yaml  robotiq_2f85_mjx.yaml  shadow_hand.yaml
mujoco_robot_environments/config/task/: apple.yaml  rearrangement.yaml
mujoco_robot_environments/environment/: README.md  base_scene.py  cameras.py  prop_initializer.py  props.py
mujoco_robot_environments/hf_scripts/: hf_data_upload.py
mujoco_robot_environments/models/: robot_arm.py
mujoco_robot_environments/models/arenas/empty_assets/: arena.xml
mujoco_robot_environments/models/arms/: franka_emika.py
mujoco_robot_environments/models/end_effectors/: robotiq_2f85.py  shadow_hand.py
mujoco_robot_environments/mujoco_ros_env_generation/: README.md  generate_drawing_env.py  generate_franka_controller_test.py  generate_franka_table.py  generate_model_env.py  generate_rearrangement_env.py
mujoco_robot_environments/tasks/: base.py  base_mjx.py  lasa_draw.py  push.py  rearrangement.py  rearrangement_mjx.py  shared_transport_mjx.py
mujoco_robot_environments/utils/: xyaxes_2_quat.py
mujoco_robotics_environments/: README.md  __init__.py  transporter_network_data_generation.py
mujoco_robotics_environments/config/: rearrangement.yaml
mujoco_robotics_environments/config/arena/: rearrangement_table.yaml
mujoco_robotics_environments/config/arena/props/: colour_splitter.yaml  single_block.yaml
mujoco_robotics_environments/config/dataset/: default.yaml
mujoco_robotics_environments/config/robots/arm/: franka_emika_panda.yaml
mujoco_robotics_environments/config/robots/arm/actuator_config/: motor.yaml  position.yaml
mujoco_robotics_environments/config/robots/arm/sensor_config/: position.yaml
mujoco_robotics_environments/config/robots/end_effector/controller_config/: min_max.yaml
mujoco_robotics_environments/config/task/: rearrangement.yaml
mujoco_robotics_environments/environment/: base_scene.py  cameras.py  prop_initializer.py  props.py
mujoco_robotics_environments/hf_scripts/: hf_data_upload.py
mujoco_robotics_environments/models/: __init__.py  robot_arm.py
mujoco_robotics_environments/models/arms/: __init__.py  robot_arm.py
mujoco_robotics_environments/models/end_effectors/: robot_hand.py  robotiq_2f85.py
mujoco_robotics_environments/mujoco_ros_env_generation/: generate_model_env.py
mujoco_robotics_environments/tasks/: rearrangement.py  rearrangement_controller_tuning.py
