[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco_robot_environments"
version = "0.1.0"
description = "Simulation environments for basic manipulation tasks."
authors = [
	{ name = "Peter David Fagan", email = "peterdavidfagan@gmail.com" }
]
readme = "README.md"

[tool.poetry]
name = "mujoco_robot_environments"
version = "0.1.0"
description = "Simulation environments for basic manipulation tasks."
license = "Apache-2.0"
authors = [
	"Peter David Fagan <peterdavidfagan@gmail.com>"
]
readme = "README.md"
classifiers = [
    "Operating System :: POSIX :: Linux"
]

packages = [
	{ include = "mujoco_robot_environments" },
]

[tool.setuptools]
py-modules=["mujoco_robot_environments"]

[tool.setuptools.package-data]
mujoco_robot_environments = ['*.png']

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.16.0"
jaxlib = ">=0.4.26"
jax = ">=0.4.26"
mujoco = "3.2.7"
mujoco-mjx = "3.2.7"
mujoco_controllers = {path="./mujoco_robot_environments/mujoco_controllers", develop=true}
robot-descriptions = {path="./mujoco_robot_environments/local_builds/robot_descriptions.py/dist/robot_descriptions-1.14.0-py3-none-any.whl"} 
brax = "^0.10.4"
pillow = "10.0.0"
matplotlib = "^3.7.2"
hydra-core = "^1.3.2"
pytest = "^7.0.0"
lark = "^1.1.7"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.9"
inflect = "^7.0.0"
wandb = "^0.16.1"
huggingface-hub = "^0.23.0"
evojax= "^0.2.16" 	
evosax= "^0.1.6"

# linux only deps
dm-reverb = {version="0.13.0", markers = "sys_platform == 'linux'"}
tensorflow-cpu = {version="^2.14.0", markers = "sys_platform == 'linux'"}
envlogger = {extras = ["tfds"], version = "^1.2", markers = "sys_platform == 'linux'"}
rlds = {version="^0.1.7", markers = "sys_platform == 'linux'"}
mink = "^0.0.5"
pylasadataset = "^0.1.1"
h5py = "^3.12.1"
keyboard = "^0.13.5"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
